feat: added db migration and project endpoints

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=ToDo;Trusted_Connection=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
